--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "tailwindcss": "^4.1.8",
     "tw-animate-css": "^1.3.4",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "vue-sonner": "^2.0.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.8",
